feat arrumando path